k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ai-backend
  namespace: ai-saas

spec:
  replicas: 2

  selector:
    matchLabels:
      app: ai-backend

  template:
    metadata:
      labels:
        app: ai-backend

    spec:
      containers:
        - name: backend
          image: tanmayanand24/saas-backend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 5000

          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
