k8s/backend-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: ai-backend

spec:
  containers:
    - name: backend
      image: tanmayanand24/ai-saas-backend:1.0
      ports:
        - containerPort: 5000
