k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-frontend
  namespace: ai-saas

spec:
  replicas: 2

  selector:
    matchLabels:
      app: ai-frontend

  template:
    metadata:
      labels:
        app: ai-frontend

    spec:

      volumes:
        - name: runtime-config
          emptyDir: {}

      containers:
        - name: frontend
          image: tanmayanand24/saas-frontend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 80

          volumeMounts:
            - name: runtime-config
              mountPath: /usr/share/nginx/html/config.js
              subPath: config.js

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
