k8s/pvc-test-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: pvc-test-pod
  namespace: ai-saas

spec:
  containers:
    - name: test-container
      image: busybox
      command: ["/bin/sh", "-c"]
      args:
        - |
          echo "Hello from Kubernetes Persistent Storage" > /data/test.txt
          sleep 3600

      volumeMounts:
        - name: persistent-storage
          mountPath: /data

  volumes:
    - name: persistent-storage
      persistentVolumeClaim:
        claimName: ai-backend-pvc
