k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ai-backend-service
  namespace: ai-saas

spec:
  selector:
    app: ai-backend

  ports:
    - port: 5000
      targetPort: 5000

  type: ClusterIP
